--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "concurrently \"npm run mock:server\" \"npm run start:dev\"",
     "start:dev": "webpack serve --mode=development --config ./webpack/webpack.dev.cjs",
+    "mock:server": "npx json-server --watch mocks/db.json --port 3005",
     "lint": "eslint './src/**/*.{js,jsx}'",
     "lint:fix": "eslint --fix './src/**/*.{js,jsx}'",
     "prettify": "prettier . --write",
@@ -25,11 +27,13 @@
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "babel-loader": "^9.1.2",
+    "concurrently": "^7.6.0",
     "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
     "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.3",
+    "json-server": "^0.17.2",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.4",
     "style-loader": "^3.3.2",
