--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint './src/**/*.{js,jsx}'",
     "lint:fix": "eslint --fix './src/**/*.{js,jsx}'",
     "prettify": "prettier . --write",
-    "prettier:check": "prettier . --check"
+    "prettier:check": "prettier . --check",
+    "test": "jest --config ./jest/jest.config.cjs --colors",
+    "test:watch": "jest --config ./jest/jest.config.cjs --watch --colors",
+    "test:coverage": "jest --config ./jest/jest.config.cjs --coverage --colors"
   },
   "keywords": [],
   "author": "Miguel Martínez",
@@ -26,13 +29,20 @@
     "@babel/preset-react": "^7.18.6",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
     "concurrently": "^7.6.0",
     "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "jest-css-modules-transform": "^4.4.2",
+    "jest-environment-jsdom": "^29.5.0",
     "json-server": "^0.17.2",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.4",
