--- a/package.json
+++ b/package.json
@@ -19,38 +19,38 @@
   "author": "Miguel Martínez",
   "license": "ISC",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "babel-jest": "^29.5.0",
-    "babel-loader": "^9.1.2",
-    "concurrently": "^7.6.0",
-    "css-loader": "^6.7.3",
-    "eslint": "^8.36.0",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "html-webpack-plugin": "^5.5.0",
-    "husky": "^8.0.3",
-    "jest": "^29.5.0",
-    "jest-css-modules-transform": "^4.4.2",
-    "jest-environment-jsdom": "^29.5.0",
-    "json-server": "^0.17.2",
-    "lint-staged": "^13.2.0",
-    "prettier": "^2.8.4",
-    "style-loader": "^3.3.2",
-    "webpack": "^5.76.2",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.12.0",
-    "webpack-merge": "^5.8.0"
+    "@babel/core": "7.21.3",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "7.18.6",
+    "@commitlint/cli": "17.4.4",
+    "@commitlint/config-conventional": "17.4.4",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "14.0.0",
+    "babel-jest": "29.5.0",
+    "babel-loader": "9.1.2",
+    "concurrently": "7.6.0",
+    "css-loader": "6.7.3",
+    "eslint": "8.36.0",
+    "eslint-plugin-jest": "27.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "html-webpack-plugin": "5.5.0",
+    "husky": "8.0.3",
+    "jest": "29.5.0",
+    "jest-css-modules-transform": "4.4.2",
+    "jest-environment-jsdom": "29.5.0",
+    "json-server": "0.17.2",
+    "lint-staged": "13.2.0",
+    "prettier": "2.8.4",
+    "style-loader": "3.3.2",
+    "webpack": "5.76.2",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.12.0",
+    "webpack-merge": "5.8.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
